--- a/OtobusBiletSistemi.Web/Areas/Admin/Views/Kullanici/Index.cshtml
+++ b/OtobusBiletSistemi.Web/Areas/Admin/Views/Kullanici/Index.cshtml
@@ -118,7 +118,7 @@
         </div>
         <div class="card-body p-4">
             <form method="get" action="/Admin/Kullanici">
-                <div class="row g-3">
+                <div class="row g-3 align-items-end">
                     <div class="col-md-8">
                         <label class="form-label text-muted fw-semibold">Arama Terimi</label>
                         <div class="input-group input-group-lg">
@@ -130,8 +130,7 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <label class="form-label text-muted fw-semibold">&nbsp;</label>
-                        <div class="d-flex gap-2 search-buttons">
+                        <div class="d-flex gap-2">
                             <button type="submit" class="btn btn-primary btn-lg flex-grow-1">
                                 <i class="fas fa-search me-2"></i>
                                 Ara
