--- a/OtobusBiletSistemi.Mobile/AppShell.xaml
+++ b/OtobusBiletSistemi.Mobile/AppShell.xaml
@@ -10,15 +10,15 @@
 
     <Shell.Resources>
         <ResourceDictionary>
-            <!-- Web ile aynı premium renkler -->
+            <!-- JSON Tasarım Sistemi - Modern Green Tab Bar -->
             <LinearGradientBrush x:Key="TabBarGradient" StartPoint="0,0" EndPoint="1,1">
-                <GradientStop Color="#667EEA" Offset="0.0" />
-                <GradientStop Color="#764BA2" Offset="1.0" />
+                <GradientStop Color="#00C853" Offset="0.0" />
+                <GradientStop Color="#4CAF50" Offset="1.0" />
             </LinearGradientBrush>
             
             <LinearGradientBrush x:Key="TabBarGradientDark" StartPoint="0,0" EndPoint="1,1">
-                <GradientStop Color="#5a6fd8" Offset="0.0" />
-                <GradientStop Color="#6a4190" Offset="1.0" />
+                <GradientStop Color="#00A843" Offset="0.0" />
+                <GradientStop Color="#388E3C" Offset="1.0" />
             </LinearGradientBrush>
             
             <Color x:Key="TabTextColor">White</Color>
@@ -27,50 +27,47 @@
             
             <!-- Modern Tab Bar Styling -->
             <Style TargetType="TabBar">
-                <Setter Property="Shell.BackgroundColor" Value="Transparent" />
-                <Setter Property="Shell.ForegroundColor" Value="{StaticResource TabTextColor}" />
-                <Setter Property="Shell.TitleColor" Value="{StaticResource TabTextColor}" />
+                <Setter Property="Shell.BackgroundColor" Value="{StaticResource Primary}" />
+                <Setter Property="Shell.ForegroundColor" Value="{StaticResource TextOnPrimary}" />
+                <Setter Property="Shell.TitleColor" Value="{StaticResource TextOnPrimary}" />
                 <Setter Property="Shell.DisabledColor" Value="#80FFFFFF" />
-                <Setter Property="Shell.UnselectedColor" Value="{StaticResource TabTextColorUnselected}" />
-                <Setter Property="Shell.TabBarBackgroundColor" Value="Transparent" />
-                <Setter Property="Shell.TabBarForegroundColor" Value="{StaticResource TabTextColor}" />
-                <Setter Property="Shell.TabBarTitleColor" Value="{StaticResource TabTextColor}" />
-                <Setter Property="Shell.TabBarUnselectedColor" Value="{StaticResource TabTextColorUnselected}" />
+                <Setter Property="Shell.UnselectedColor" Value="#CCFFFFFF" />
+                <Setter Property="Shell.TabBarBackgroundColor" Value="{StaticResource Primary}" />
+                <Setter Property="Shell.TabBarForegroundColor" Value="{StaticResource TextOnPrimary}" />
+                <Setter Property="Shell.TabBarTitleColor" Value="{StaticResource TextOnPrimary}" />
+                <Setter Property="Shell.TabBarUnselectedColor" Value="#CCFFFFFF" />
             </Style>
             
             <!-- Professional Tab Styling -->
             <Style TargetType="Tab">
                 <Setter Property="Shell.BackgroundColor" Value="Transparent" />
-                <Setter Property="Shell.ForegroundColor" Value="{StaticResource TabTextColor}" />
-                <Setter Property="Shell.TitleColor" Value="{StaticResource TabTextColor}" />
-                <Setter Property="Shell.UnselectedColor" Value="{StaticResource TabTextColorUnselected}" />
+                <Setter Property="Shell.ForegroundColor" Value="{StaticResource TextOnPrimary}" />
+                <Setter Property="Shell.TitleColor" Value="{StaticResource TextOnPrimary}" />
+                <Setter Property="Shell.UnselectedColor" Value="#CCFFFFFF" />
             </Style>
             
             <!-- Modern Shell Content Styling -->
             <Style TargetType="ShellContent">
                 <Setter Property="Shell.BackgroundColor" Value="Transparent" />
-                <Setter Property="Shell.ForegroundColor" Value="{StaticResource TabTextColor}" />
-                <Setter Property="Shell.TitleColor" Value="{StaticResource TabTextColor}" />
+                <Setter Property="Shell.ForegroundColor" Value="{StaticResource TextOnPrimary}" />
+                <Setter Property="Shell.TitleColor" Value="{StaticResource TextOnPrimary}" />
             </Style>
         </ResourceDictionary>
     </Shell.Resources>
 
-    <!-- Custom Tab Bar with Gradient Background -->
+    <!-- Custom Tab Bar with Modern Green Design -->
     <Shell.TabBarIsVisible>True</Shell.TabBarIsVisible>
     
     <TabBar x:Name="MainTabBar"
-            Shell.TabBarBackgroundColor="#667EEA"
-            Shell.TabBarForegroundColor="White"
-            Shell.TabBarTitleColor="White"
-            Shell.TabBarUnselectedColor="#CCFFFFFF">
+            Shell.TabBarBackgroundColor="White"
+            Shell.TabBarForegroundColor="#667EEA"
+            Shell.TabBarTitleColor="#667EEA"
+            Shell.TabBarUnselectedColor="#95A5A6">
         
         <!-- Sefer Arama Tab -->
         <Tab x:Name="SeferTab" Title="Sefer Ara">
             <Tab.Icon>
-                <FontImageSource 
-                    Glyph="🔍" 
-                    Color="White" 
-                    Size="18" />
+                <FontImageSource Glyph="🔍" Color="#667EEA" Size="18" />
             </Tab.Icon>
             <ShellContent ContentTemplate="{DataTemplate views:SeferListPage}" Route="SeferListPage" />
         </Tab>
@@ -78,10 +75,7 @@
         <!-- Biletlerim Tab -->
         <Tab x:Name="BiletTab" Title="Biletlerim">
             <Tab.Icon>
-                <FontImageSource 
-                    Glyph="🎫" 
-                    Color="White" 
-                    Size="18" />
+                <FontImageSource Glyph="🎫" Color="#667EEA" Size="18" />
             </Tab.Icon>
             <ShellContent ContentTemplate="{DataTemplate local:MainPage}" Route="BiletlerimPage" />
         </Tab>
@@ -89,10 +83,7 @@
         <!-- Profil Tab -->
         <Tab x:Name="ProfilTab" Title="Profil">
             <Tab.Icon>
-                <FontImageSource 
-                    Glyph="👤" 
-                    Color="White" 
-                    Size="18" />
+                <FontImageSource Glyph="👤" Color="#667EEA" Size="18" />
             </Tab.Icon>
             <ShellContent ContentTemplate="{DataTemplate local:MainPage}" Route="ProfilPage" />
         </Tab>
@@ -101,7 +92,17 @@
     <!-- Modal sayfalar -->
     <ShellContent
         ContentTemplate="{DataTemplate views:KoltukSecimPage}"
-        Route="koltuklarpage"
+        Route="KoltukSecimPage"
+        Shell.PresentationMode="Modal" />
+
+    <ShellContent
+        ContentTemplate="{DataTemplate views:BiletSahibiBilgileriPage}"
+        Route="BiletSahibiBilgileriPage"
+        Shell.PresentationMode="Modal" />
+
+    <ShellContent
+        ContentTemplate="{DataTemplate views:OdemePage}"
+        Route="OdemePage"
         Shell.PresentationMode="Modal" />
 
 </Shell>
